# polymcp

./: .gitignore  CLAUDE.md  Cargo.toml  polygon-stocks-openapi.json
.claude/: settings.json
.claude/commands/: implement-issue.md  plan-issue.md  review-issue.md  sync-issues.md
.github/: .sync-state.json
.github/issues/: README.md  _index.json  _labels.json  _milestones.json  _schema.json
.github/issues/epics/: 00-mcp-core.json  01-polygon-client.json  02-stocks-tools.json  03-reference-tools.json  04-options-tools.json  05-forex-tools.json  06-crypto-tools.json  07-indices-tools.json  08-production.json
.github/workflows/: ci.yml  release.yml
scripts/: README.md  pyproject.toml
scripts/sync_issues/: __init__.py  __main__.py  github.py  loader.py  models.py  state.py  sync.py
src/: lib.rs  main.rs
src/mcp/: error.rs  jsonrpc.rs  mod.rs  server.rs  transport.rs  types.rs
src/polygon/: cache.rs  client.rs  error.rs  mod.rs  pagination.rs  rate_limit.rs  retry.rs  types.rs
src/tools/: mod.rs
src/tools/crypto/: aggregates.rs  mod.rs  snapshots.rs  trades.rs  types.rs
src/tools/forex/: aggregates.rs  conversion.rs  mod.rs  snapshots.rs  types.rs
src/tools/indices/: aggregates.rs  mod.rs  open_close.rs  snapshots.rs  types.rs
src/tools/options/: aggregates.rs  contracts.rs  mod.rs  snapshots.rs  types.rs
src/tools/reference/: dividends.rs  market_status.rs  mod.rs  news.rs  splits.rs  tickers.rs  types.rs
src/tools/stocks/: aggregates.rs  indicators.rs  mod.rs  snapshots.rs  trades.rs  types.rs
