[package]
name = "polygon-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server providing Polygon.io financial data API as tools for AI assistants"
license = "MIT"
repository = "https://github.com/polygon-io/polygon-mcp"
rust-version = "1.85"

[lib]
name = "polygon_mcp"
path = "src/lib.rs"

[[bin]]
name = "polygon-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
